Fixed information area wrapping

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ a {
   display: flex;
   justify-content: space-evenly;
   padding: 25px;
+  flex-wrap: wrap;
 }
 
 .information-content {
